<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/FirstHalf"
        android:background="@drawable/halfbackground"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="350dp">
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="150dp"

            android:src="@drawable/profile"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>
        <TextView
            android:id="@+id/Name"
            android:text="@string/name"
            android:textSize="28sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/profile_image"
            android:layout_marginTop="15dp"
            android:textColor="#4d3f3f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/location"
            android:layout_below="@+id/Name"
            android:textStyle="normal"
            android:text="@string/location"
            android:layout_marginTop="2dp"
            android:textColor="#816a6a"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="370dp"
        android:layout_height="90dp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">
        <RelativeLayout
            android:id="@+id/CardBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/photos"
                android:text="@string/photos"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="35dp"
                android:textStyle="bold"
                android:textColor="#a68888"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/NoOfPhoto"
                android:text="@string/NoOfPhotos"
                android:layout_below="@+id/photos"
                android:layout_width="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:textColor="#31c0f4"
                android:textSize="18sp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/Followers"
                android:text="@string/Followers"
                android:layout_toRightOf="@+id/photos"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="60dp"
                android:layout_alignBaseline="@+id/photos"
                android:textColor="#a68888"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/followersCountNo"
                android:text="@string/FollowersCount"
                android:layout_below="@+id/Followers"
                android:layout_toRightOf="@+id/NoOfPhoto"
                android:layout_alignBaseline="@+id/NoOfPhoto"
                android:layout_marginLeft="89dp"
                android:textColor="#31c0f4"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/Following"
                android:text="@string/Following"
                android:textColor="#a68888"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/Followers"
                android:layout_alignBaseline="@+id/Followers"
                android:layout_marginLeft="45dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/FollowingCount"
                android:text="@string/followingCount"
                android:layout_toRightOf="@+id/Followers"
                android:layout_alignBaseline="@+id/followersCountNo"
                android:layout_marginLeft="72dp"
                android:textColor="#31c0f4"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>
    <RelativeLayout
        android:id="@+id/SecondHalf"
        android:layout_below="@+id/FirstHalf"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    </RelativeLayout>


</RelativeLayout>